--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,8 +1,11 @@
 @charset "UTF-8";
-/*tablet*/
 
+/*tablet*/
 @media screen and (min-width: 768px) and (max-width: 992px){
-    section#caixa{
+    body{
+        background-image: linear-gradient(to bottom , #5f2c82 , #49a09d);
+    }
+    section#login{
         position: absolute;
         top: 50%;
         left: 50%;
@@ -21,15 +24,45 @@
         width: 280px;
         height: 280px;
         border-radius: 20px 0px 0px 20px;
-
     }
-    div#conteudo{
+    div#formulario{
         display: inline;
         width: 100%;
         height: 280px;
-
     }
-
-
-
 }
+
+/* desktop */
+@media screen and (min-width: 992px){
+    body{
+        background-image: linear-gradient(to bottom, #5f2c82, #49a09d)
+    }
+    section#login{
+        position:absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 350px;
+        width: 950px;
+        background-color: white;
+        border-radius: 20px;
+        display: inline-flex;
+    }
+    div#imagem{
+        background-image: url(../imagens/metal.jpg);
+        background-position: left bottom;
+        width: 50%;
+        height: 100%;
+        border-radius: 0px 20px 20px 0px;
+    }
+    div#formulario{
+        width: 50%;
+    }
+    div#formulario > p{
+        font-size: 1em;
+        padding-bottom: 20px;
+    }
+    div#formulario > h1{
+        font-size: 2em;
+    }
+}   
